# SDDRI-HACKATHON-II

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.specify/memory/: constitution.md
cli/: main.py  pyproject.toml
cli/models/: task.py
cli/services/: task_service.py
cli/ui/: add_task.py  delete_task.py  edit_task.py  main_menu.py  task_list.py
history/prompts/001-todo-cli-tui/: 0001-todo-cli-tui-specification.spec.prompt.md  0002-todo-cli-tui-implementation-plan.plan.prompt.md  0003-todo-cli-tui-implementation-tasks.tasks.prompt.md  0004-todo-cli-tui-mvp-implementation.green.prompt.md
history/prompts/constitution/: 001-initial-phase1-constitution.constitution.prompt.md
specs/001-todo-cli-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-tui/checklists/: requirements.md
tests/unit/: test_task_model.py  test_task_service.py
